RESOLVED FIXED123885
AX: [ATK] <span> elements exposed through ATK when not needed
https://bugs.webkit.org/show_bug.cgi?id=123885
Summary AX: [ATK] <span> elements exposed through ATK when not needed
Mario Sanchez Prada
Reported 2013-11-06 03:10:13 PST
The patch for bug 121335 has introduced a change in how is determined when an accessibility object gets ignored that causes that all <span> elements show up in the accessibility tree even when they should not (e.g. not explicitly focusable due to tabindex, no ARIA rule mandating that, no meaningful accessible name...) For that reason the following tests are failing now, as the StaticText objects inside those <span> elements are not getting properly folded into their parents anymore: platform/gtk/accessibility/spans-paragraphs-and-divs.html platform/gtk/accessibility/spans.html
Attachments
Patch proposal (15.53 KB, patch)
2013-11-06 07:55 PST, Mario Sanchez Prada
no flags
Patch proposal (13.28 KB, patch)
2013-11-07 06:41 PST, Mario Sanchez Prada
eflews.bot: commit-queue-
Patch proposal (13.48 KB, patch)
2013-11-07 07:24 PST, Mario Sanchez Prada
cfleizach: review+
Radar WebKit Bug Importer
Comment 1 2013-11-06 03:10:44 PST
Mario Sanchez Prada
Comment 2 2013-11-06 07:55:52 PST
Created attachment 216177 [details] Patch proposal
chris fleizach
Comment 3 2013-11-06 08:19:45 PST
Comment on attachment 216177 [details] Patch proposal View in context: https://bugs.webkit.org/attachment.cgi?id=216177&action=review > Source/WebCore/accessibility/AccessibilityNodeObject.cpp:1925 > + can all these checks move into AccessibilityObject? > Source/WebCore/accessibility/AccessibilityObject.h:608 > + virtual bool hasAccessibleName() const; I think this should be called something like hasAccessibleAttributes() or hasRequiredInclusionAttributes() or hasAttributedRequiredForInclusion() something to denote that this method should be used to determine whether to include it in the tree
Mario Sanchez Prada
Comment 4 2013-11-06 09:51:23 PST
Comment on attachment 216177 [details] Patch proposal View in context: https://bugs.webkit.org/attachment.cgi?id=216177&action=review >> Source/WebCore/accessibility/AccessibilityNodeObject.cpp:1925 >> + > > can all these checks move into AccessibilityObject? Hmm... yes and no: we can move the MathML part but not the ariaAccessibilityDescription() call since that's a non-virtual method from AccessibilityNodeObject. >> Source/WebCore/accessibility/AccessibilityObject.h:608 >> + virtual bool hasAccessibleName() const; > > I think this should be called something like hasAccessibleAttributes() or hasRequiredInclusionAttributes() or hasAttributedRequiredForInclusion() > > something to denote that this method should be used to determine whether to include it in the tree Believe it or not, I struggled to find a name for this and in the end this is the least bad I found. hasAttributedRequiredForInclusion() sounds good to me, though
chris fleizach
Comment 5 2013-11-06 11:02:51 PST
(In reply to comment #4) > (From update of attachment 216177 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=216177&action=review > > >> Source/WebCore/accessibility/AccessibilityNodeObject.cpp:1925 > >> + > > > > can all these checks move into AccessibilityObject? > > Hmm... yes and no: we can move the MathML part but not the ariaAccessibilityDescription() call since that's a non-virtual method from AccessibilityNodeObject. > > >> Source/WebCore/accessibility/AccessibilityObject.h:608 > >> + virtual bool hasAccessibleName() const; > > > > I think this should be called something like hasAccessibleAttributes() or hasRequiredInclusionAttributes() or hasAttributedRequiredForInclusion() > > > > something to denote that this method should be used to determine whether to include it in the tree > > Believe it or not, I struggled to find a name for this and in the end this is the least bad I found. > > hasAttributedRequiredForInclusion() sounds good to me, though should be: hasAttributesRequiredForInclusion()
Mario Sanchez Prada
Comment 6 2013-11-07 06:41:42 PST
Created attachment 216298 [details] Patch proposal (In reply to comment #5) > [...] > should be: hasAttributesRequiredForInclusion() New patch attached renaming that function and moving the MathML bits up into AccessibilityObject
EFL EWS Bot
Comment 7 2013-11-07 06:47:27 PST
Comment on attachment 216298 [details] Patch proposal Attachment 216298 [details] did not pass efl-wk2-ews (efl-wk2): Output: http://webkit-queues.appspot.com/results/21248312
EFL EWS Bot
Comment 8 2013-11-07 06:48:11 PST
kov's GTK+ EWS bot
Comment 9 2013-11-07 06:51:59 PST
Mario Sanchez Prada
Comment 10 2013-11-07 07:24:01 PST
Created attachment 216299 [details] Patch proposal
Mario Sanchez Prada
Comment 11 2013-11-08 02:53:45 PST
Note You need to log in before you can comment on or make changes to this bug.